fixed margins on footer. waiting to test on IOS

--- a/components/bottom-toolbar/styles.css
+++ b/components/bottom-toolbar/styles.css
@@ -3,12 +3,14 @@
   bottom: 0;
   background-color: white;
   height: 70;
+  margin: auto;
+  align-self: center;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
   z-index: 9999;
   justify-self: flex-end;
-  width: 100%;
+  width: 105%;
   padding: 0 10px;
   border-top-width: 1px;
 }
